@@ -1,3 +1,9 @@
+2008-02-28  Bastien Nocera  <hadess@hadess.net>
+
+	* daemon/gvfsbackendobexftp-fl-parser.c (fl_parser_start_node_cb):
+	Set the content-type on files by having a good guess if we didn't
+	get a mime-type from the folder listings
+
 2008-02-27  Benjamin Otte  <otte@gnome.org>
 
 	* programs/gvfs-mount.c: (prompt_for):
